// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RTL InvalidIcon should render correctly 1`] = `
<Text
  allowFontScaling={false}
  style={
    Array [
      Object {
        "color": "rgb(17, 18, 54)",
        "fontFamily": "BpkIcon",
        "fontSize": 24,
        "includeFontPadding": false,
      },
      Object {
        "fontSize": 16,
      },
      Array [
        Object {
          "position": "absolute",
          "right": 9,
        },
        Object {
          "color": "rgb(209, 67, 91)",
        },
      ],
    ]
  }
>
  
</Text>
`;

exports[`RTL ValidIcon should render correctly 1`] = `
<Text
  allowFontScaling={false}
  style={
    Array [
      Object {
        "color": "rgb(17, 18, 54)",
        "fontFamily": "BpkIcon",
        "fontSize": 24,
        "includeFontPadding": false,
      },
      Object {
        "fontSize": 16,
      },
      Array [
        Object {
          "position": "absolute",
          "right": 9,
        },
        Object {
          "color": "rgb(0, 166, 152)",
        },
      ],
    ]
  }
>
  
</Text>
`;
